--- a/DatingApp-Server/appsettings.Development.json
+++ b/DatingApp-Server/appsettings.Development.json
@@ -8,7 +8,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DatingApp_Server.db"
+    "DefaultConnection": "Server=VANDAN;Database=AppChat;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "TokenKey": "super secret unguessable key dan"
 }
