--- a/DatingApp-Server/Properties/launchSettings.json
+++ b/DatingApp-Server/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "DatingApp_Server": {
+    "AppChat_Server": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
